Fix icon misalignment on tablet breakpoints

--- a/src/site/_styles/docs.scss
+++ b/src/site/_styles/docs.scss
@@ -138,7 +138,11 @@ hr {
 .illustratedexamples-item {
   text-align: center;
   list-style-type: none;
-  min-height: 217px;
+  min-height: 270px;
+
+  @media #{$mt3_mq-lg} {
+    min-height: 217px;
+  }
 }
 
 .circle {
